# distfit

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  irelease.py  make_build.sh  make_clean.sh  make_new_build.sh  pyproject.toml  release.sh  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  pytest.yml
depricated/: hist.py
distfit/: __init__.py  distfit.py  examples.py  hypotesting.py  multidistfit.py  test.py
distfit/helpers/: path.py  savefig.py
distfit/other/: caerus.py  dist2labx.py  peakdetect.py
distfit/tests/: test_distfit.py  test_multidistfit.py
distfit/utils/: picklefast.py  smoothline.py
docs/figs/: distfit.pptx  example.pptx  fig_common_shapes.pptx  fig_common_shapes_wallpaper.pptx  fig_distributions.pptx  logo.pptx
docs/pages/: Discrete.html  Documentation.html  Examples.html  Functions.html  Generate.html  Percentile.html  Plots.html  Quantile.html  distfit.distfit.html  genindex.html  index.html  objects.inv  py-modindex.html  searchindex.js  sponsor.html
docs/pages/_sources/: Abstract.rst.txt  Coding quality.rst.txt  Documentation.rst.txt  Examples.rst.txt  Percentile.rst.txt  Performance.rst.txt  Save and Load.rst.txt  distfit.distfit.rst.txt
docs/pages/doctrees/: Abstract.doctree  Algorithm.doctree  Blog.doctree  Coding quality.doctree  Cross validation and hyperparameter tuning.doctree  Discrete.doctree  Documentation.doctree  Examples.doctree  Functions.doctree  Generate.doctree  Installation.doctree  Parametric.doctree  Percentile.doctree  Performance.doctree  Plots.doctree  Quantile.doctree  Save and Load.doctree  Univariate.doctree  distfit.distfit.doctree  environment.pickle  index.doctree  multivariate.doctree  multivariate1.doctree  sponsor.doctree
docs/pages/html/: .buildinfo  Abstract.html  Algorithm.html  Blog.html  Coding quality.html  Cross validation and hyperparameter tuning.html  Discrete.html  Documentation.html  Examples.html  Functions.html  Generate.html  Installation.html  Parametric.html  Percentile.html  (+15 more)
docs/source/: Abstract.rst  Algorithm.rst  Blog.rst  Coding quality.rst  Cross validation and hyperparameter tuning.rst  Discrete.rst  Documentation.rst  Examples.rst  Functions.rst  Generate.rst  Installation.rst  Parametric.rst  Percentile.rst  Performance.rst  Plots.rst  Quantile.rst  Save and Load.rst  conf.py  distfit.distfit.rst  helper.py  index.rst  multivariate.rst
experiments/: distfit_parr.py
notebooks/: distfit.ipynb  medium_blog_anomaly_detection_univariate.py
tests/: test_distfit.py
(+25 files in other folders)
